--- a/8. Python Lists/2. Getting to Lists.ipynb
+++ b/8. Python Lists/2. Getting to Lists.ipynb
@@ -11,7 +11,7 @@
     "Flower = [\"Rose\", \"Lily\", \"Daisy\", \"Iris\", \"Lavender\", \"Sunflower\", \"Violet\", \"Waxflower\"] # list of strings\n",
     "numFloat = [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0] # list of float\n",
     "TFList = [True, False, True, False] # list of true-false\n",
-    "emptyList = []"
+    "emptyList = [] #empty list"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -50,15 +50,15 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# lists in list\n",
+    "# lists in list ## 2D array\n",
     "Lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
-    "Lists[0]\n"
+    "Lists[0]"
    ]
   },
   {
