Adv Python File Handling

--- a/15. Adv Python Date and Time/01. How to Use Date & DateTime Class.ipynb
+++ b/15. Adv Python Date and Time/01. How to Use Date & DateTime Class.ipynb
@@ -23,6 +23,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = date.today()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's date is  2019-06-27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Today's date is \", today)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's day is  27\n",
+      "Today's month is  6\n",
+      "Today's year is  2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Today's day is \", today.day)\n",
+    "print(\"Today's month is \", today.month)\n",
+    "print(\"Today's year is \", today.year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todays day is  thursday\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Day     WeekDay Number\n",
+    "# Monday        0\n",
+    "# Tuesday       1\n",
+    "# Wednesday     2\n",
+    "# Thursday      3\n",
+    "# Friday        4\n",
+    "# Saturday      5\n",
+    "# Sunday        6\n",
+    "days= [\"monday\",\"tuesday\",\"wednesday\",\"thursday\",\"friday\",\"saturday\",\"sunday\"]\n",
+    "print(\"Todays day is \", days[date.today().weekday()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
