Adv Python Class & Object

--- a/19. Adv Python Class & Object/06. Self-variable in python.ipynb
+++ b/19. Adv Python Class & Object/06. Self-variable in python.ipynb
@@ -1,51 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T20:55:18.855866Z",
+     "start_time": "2019-07-01T20:55:18.851857Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not allow loan\n"
+     ]
+    }
+   ],
+   "source": [
+    "class bank:\n",
+    "    money = False # This is only important\n",
+    "    def loan(self):\n",
+    "        if(self.money is not False):\n",
+    "            print(\"allow loan\")\n",
+    "        else:\n",
+    "            print(\"not allow loan\")\n",
+    "x = bank()\n",
+    "x.loan()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T20:56:55.199811Z",
+     "start_time": "2019-07-01T20:56:55.196301Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.money  =>   False\n",
+      "y.money  =>   True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = bank()\n",
+    "print(\"x.money  =>  \", x.money)\n",
+    "\n",
+    "y = bank()\n",
+    "y.bank = True\n",
+    "print(\"y.money  =>  \", y.bank)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists and strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['M', 'a', 'g', 'e', 'n', 't', 'a']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# convert list from strings\n",
-    "# 1. one character one by one\n",
-    "string = \"Magenta\"\n",
-    "list_f = list(string)\n",
-    "print(list_f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Rose', 'Magenta', 'Lily', 'Iris']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#  split string into list, i.e. word by word\n",
-    "string = \"Rose Magenta Lily Iris\"\n",
-    "list_flowers = string.split(\" \")\n",
-    "print(list_flowers)"
+    "self variable means \"self refers to the bound variable or object. In the first case it was x because we had assigned the bank class to x whereas in the second case it referred to bank(). **Now if we have another bank y, self will know to access the money value of y and not x.\"**"
    ]
   },
   {
