adv Python OOPs

--- a/19. Adv Python Class & Object/01. Define Classes.ipynb
+++ b/19. Adv Python Class & Object/01. Define Classes.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# class < classname >:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-01T18:28:22.586550Z",
-     "start_time": "2019-07-01T18:28:22.582502Z"
+     "end_time": "2019-07-02T17:35:00.953288Z",
+     "start_time": "2019-07-02T17:35:00.949319Z"
     }
    },
    "outputs": [],
@@ -86,6 +93,43 @@
    ],
    "source": [
     "rectangle = Box(40, 50)\n",
+    "rectangle.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# class < classname >(object):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-02T17:36:00.794338Z",
+     "start_time": "2019-07-02T17:36:00.790330Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  10  b =  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Box(object):\n",
+    "    def __init__(self):\n",
+    "        '''This is  Doc-String Initialisation '''\n",
+    "        self.a = 10\n",
+    "        self.b = 20\n",
+    "    def show(self):\n",
+    "        print(\"a = \", self.a, \" b = \", self.b)\n",
+    "rectangle = Box()\n",
     "rectangle.show()"
    ]
   },
