--- a/20. Adv OOPs Concepts/03. Polymorphism.ipynb
+++ b/20. Adv OOPs Concepts/03. Polymorphism.ipynb
@@ -127,6 +127,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-02T17:34:19.658991Z",
+     "start_time": "2019-07-02T17:34:19.605816Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wow\n",
+      "meow\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reset -f\n",
+    "class Dog:\n",
+    "    def sound(self):\n",
+    "        print(\"wow\")\n",
+    "\n",
+    "class Cat:\n",
+    "    def sound(self):\n",
+    "        print(\"meow\")\n",
+    "\n",
+    "def makesound(animalType):\n",
+    "        animalType.sound()\n",
+    "    \n",
+    "a = Dog()\n",
+    "b = Cat()\n",
+    "\n",
+    "makesound(a)\n",
+    "makesound(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-02T17:33:55.834760Z",
+     "start_time": "2019-07-02T17:33:55.822766Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-02T17:48:14.127801Z",
+     "start_time": "2019-07-02T17:48:14.119820Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bananatruck: Truck driving slowly because heavily loaded.\n",
+      "Orangetruck: Truck driving slowly because heavily loaded.\n",
+      "Z3: Sportscar driving!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def drive(self):\n",
+    "        raise NotImplementedError(\"Subclass must implement abstract method\")\n",
+    "\n",
+    "    def stop(self):\n",
+    "        raise NotImplementedError(\"Subclass must implement abstract method\")\n",
+    "    \n",
+    "class Sportscar(Car):\n",
+    "    def drive(self):\n",
+    "        return 'Sportscar driving!'\n",
+    "\n",
+    "    def stop(self):\n",
+    "        return 'Sportscar braking!'\n",
+    "    \n",
+    "class Truck(Car):\n",
+    "    def drive(self):\n",
+    "        return 'Truck driving slowly because heavily loaded.'\n",
+    "\n",
+    "    def stop(self):\n",
+    "        return 'Truck braking!'\n",
+    "\n",
+    "cars = [Truck('Bananatruck'),\n",
+    "Truck('Orangetruck'),\n",
+    "Sportscar('Z3')]\n",
+    "\n",
+    "for car in cars:\n",
+    "    print (car.name + ': ' + car.drive())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
