--- a/20. Adv OOPs Concepts/07. staticmethod.ipynb
+++ b/20. Adv OOPs Concepts/07. staticmethod.ipynb
@@ -4,18 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __new__()  \n",
-    "# __init__()  \n",
-    "# __str__()"
+    "# static method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**it doesn't have relation with class, object  \n",
+    "is just for some random calculation and return/print**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-02T08:43:41.805953Z",
-     "start_time": "2019-07-02T08:43:41.800943Z"
+     "end_time": "2019-07-02T13:59:35.988525Z",
+     "start_time": "2019-07-02T13:59:35.983606Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "class Employee:\n",
+    "    salary = 0\n",
+    "    def setName(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def isWorkday(day):\n",
+    "        if day.weekday() == 5 or day.weekday() == 6:\n",
+    "            print(\"Today is workday\")\n",
+    "        else:\n",
+    "            print(\"Not Workday\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-02T13:58:20.221250Z",
+     "start_time": "2019-07-02T13:58:20.216273Z"
     }
    },
    "outputs": [
@@ -23,19 +54,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aniket\n"
+      "Not Workday\n"
      ]
     }
    ],
    "source": [
-    "class Box:\n",
-    "    length = 20\n",
-    "    def __init__(self):\n",
-    "        print(\"aniket\")\n",
+    "E1 = Employee()\n",
     "\n",
-    "x = Box()\n",
-    "\n",
-    "del x"
+    "day = datetime.datetime(2019, 7, 2)\n",
+    "E1.isWorkday(day)"
    ]
   },
   {
@@ -43,9 +70,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Box  "
-   ]
+   "source": []
   }
  ],
  "metadata": {
