--- a/20. Adv OOPs Concepts/06. ClassMethods.ipynb
+++ b/20. Adv OOPs Concepts/06. ClassMethods.ipynb
@@ -190,6 +190,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# classmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-03T13:21:26.355661Z",
+     "start_time": "2019-07-03T13:21:26.314551Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complex 10 + 14i\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Complex"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# task is pass String and get Complex\n",
+    "%reset -f\n",
+    "class Complex:\n",
+    "    def __init__(self, real, img):\n",
+    "        \n",
+    "        self.real = int(real)\n",
+    "        self.img = int(img)\n",
+    "     \n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Complex {self.real} + {self.img}i\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def fromString(cls, c_string):\n",
+    "        real, img = c_string.split(\"-\")\n",
+    "        return cls(real, img )\n",
+    "\n",
+    "C4 = Complex.fromString(\"10-14\")\n",
+    "print(C4)\n",
+    "type(C4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-03T12:41:22.003862Z",
+     "start_time": "2019-07-03T12:41:21.995841Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complex 10 + 14i\n",
+      "Complex 140 + 110i\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Complex"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# task is I have 2 complex number and i want their addition as Object\n",
+    "class Complex:\n",
+    "    def __init__(self, real, img):\n",
+    "        self.real = int(real)\n",
+    "        self.img = int(img)\n",
+    "\n",
+    "    def __add__(self, e):\n",
+    "        return Complex(self.real+e.real, self.img+e.img)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Complex {self.real} + {self.img}i\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def fromString(cls, c_string):\n",
+    "        \n",
+    "        return cls(c_string.split(\"-\")[0],c_string.split(\"-\")[1] )\n",
+    "    \n",
+    "C1 = Complex(40, 60)\n",
+    "C2 = Complex(100, 50)\n",
+    "\n",
+    "C4 = Complex.fromString(\"10-14\")\n",
+    "print(C4)\n",
+    "\n",
+    "C3 = C1 + C2\n",
+    "print(C3)\n",
+    "type(C3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-03T12:40:55.152253Z",
+     "start_time": "2019-07-03T12:40:55.149246Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['10', '14']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'10-14'.split(\"-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-07-03T13:20:08.617Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# task is I have 2 complex number and i want their addition as Object\n",
+    "%reset -f\n",
+    "class Complex:\n",
+    "    def __init__(self, *args):\n",
+    "        \n",
+    "        self.real = int(args[0][0])\n",
+    "        self.img = int(args[0][1])\n",
+    "\n",
+    "    def __add__(self, e):\n",
+    "        return Complex([self.real+e.real, self.img+e.img])\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Complex {self.real} + {self.img}i\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def fromString(cls, c_string):\n",
+    "        \n",
+    "        return cls(c_string.split(\"-\") )\n",
+    "    \n",
+    "C1 = Complex([40, 60])\n",
+    "C2 = Complex([100, 50])\n",
+    "\n",
+    "C4 = Complex.fromString(\"10-14\")\n",
+    "print(C4)\n",
+    "\n",
+    "C3 = C1 + C2\n",
+    "print(C3)\n",
+    "type(C3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-07-03T13:20:35.760Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%who"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
