--- a/20. Adv OOPs Concepts/02. Overloading and Over Riding.ipynb
+++ b/20. Adv OOPs Concepts/02. Overloading and Over Riding.ipynb
@@ -65,52 +65,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# function Overloading"
+    "#  Overloading isn't allowed\n",
+    "\n",
+    "**we have defined two  method, but we can only use the second method, as python does not supports method overloading. We may define many method of same name and different argument but we can only use the latest defined method**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-02T10:36:49.030590Z",
-     "start_time": "2019-07-02T10:36:49.012542Z"
+     "end_time": "2019-07-03T09:20:34.383003Z",
+     "start_time": "2019-07-03T09:20:34.378992Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 2 arguments  passed :=   40  and  20\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "show() missing 1 required positional argument: 'j'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-46-3dcc4b4a2a4b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mb3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBase\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m40\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mb3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m40\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mb3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: show() missing 1 required positional argument: 'j'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Base:\n",
-    "    length = 0 \n",
-    "    width = 0\n",
-    "    def __init__(self , length, width):\n",
-    "        self.length = length\n",
-    "        self.width = width\n",
-    "    def show(self, i):\n",
-    "        print(\" 1 argument passed  := \", i)\n",
-    "    def show(self, i , j):\n",
-    "        print(\" 2 arguments  passed :=  \", i, \" and \", j)\n",
-    "b3 = Base(20, 40)\n",
-    "b3.show(40, 20)\n",
-    "b3.show(4)"
+    "# function overloading is not allowed in class"
    ]
   },
   {
@@ -118,37 +89,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-02T10:15:21.133691Z",
-     "start_time": "2019-07-02T10:15:21.129724Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def sum(a, b):\n",
-    "    return a, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-07-02T10:16:33.512692Z",
-     "start_time": "2019-07-02T10:16:33.508720Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "a, b = sum(20, 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-07-02T10:19:11.088710Z",
-     "start_time": "2019-07-02T10:19:11.082733Z"
+     "end_time": "2019-07-03T09:27:51.538018Z",
+     "start_time": "2019-07-03T09:27:51.530001Z"
     }
    },
    "outputs": [
@@ -156,16 +98,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40 50\n"
+      "length := 40 and width := 20 ( 2 arguments  passed ) \n"
      ]
     }
    ],
    "source": [
-    "def diff(a, g):\n",
-    "    return a, g\n",
-    "a, g = diff(40, 50)\n",
-    "print(a, end=\" \")\n",
-    "print(g)"
+    "class Base:\n",
+    "    length = 0\n",
+    "    width = 0\n",
+    "\n",
+    "    def setParameters(self, i):\n",
+    "        self.length = i\n",
+    "        print(\"length :=\", i, \"( 1 arguments  passed ) \")\n",
+    "\n",
+    "    def setParameters(self, i, j):\n",
+    "        self.length, self.width = i, j\n",
+    "        print(\"length :=\", i, \"and width :=\", j, \"( 2 arguments  passed ) \")\n",
+    "\n",
+    "\n",
+    "b3 = Base()\n",
+    "b3.setParameters(40, 20)\n",
+    "\n",
+    "# Uncommenting below shows error\n",
+    "# b4 = Base()\n",
+    "# b4.setParameters(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-03T09:20:55.172143Z",
+     "start_time": "2019-07-03T09:20:55.168133Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#  function overloading not allowed in functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-03T09:28:32.684458Z",
+     "start_time": "2019-07-03T09:28:32.675469Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum(a, b, c):\n",
+    "    return a+b+c\n",
+    "\n",
+    "\n",
+    "def sum(a):\n",
+    "    return a+10\n",
+    "\n",
+    "\n",
+    "def sum(a, b):  # this latest definition is accepted for function sum with 2 arguments\n",
+    "    return a+b\n",
+    "\n",
+    "\n",
+    "sum(10, 20)\n",
+    "\n",
+    "# Uncomeenting below shows an error\n",
+    "# sum(40)\n",
+    "# sum(10, 20, 30)"
    ]
   },
   {
@@ -177,11 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-02T10:37:44.930435Z",
-     "start_time": "2019-07-02T10:37:44.924418Z"
+     "end_time": "2019-07-03T09:25:03.189269Z",
+     "start_time": "2019-07-03T09:25:03.184255Z"
     }
    },
    "outputs": [
@@ -199,7 +210,7 @@
     "        print( msg )\n",
     "    \n",
     "b = Box()\n",
-    "b.say(\"ABC\", )"
+    "b.say(\"ABC\" )"
    ]
   },
   {
@@ -240,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Operator Overloading"
+    "# Operator Overloading\n"
    ]
   },
   {
@@ -371,11 +382,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Binary Substraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-03T09:59:56.069745Z",
+     "start_time": "2019-07-03T09:59:56.055707Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =:  140  b =:  150\n",
+      "a =:  50  b =:  90\n",
+      "\n",
+      "a =:  90  b =:  60\n",
+      "a =:  7000  b =:  13500\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Arithmatic:\n",
+    "    def __init__(self, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "\n",
+    "    def __sub__(self, obj):\n",
+    "        c = Arithmatic(0, 0)\n",
+    "        c.a = self.a - obj.a\n",
+    "        c.b = self.b - obj.b\n",
+    "        return c\n",
+    "    \n",
+    "    def __mul__(self, obj):\n",
+    "        c = Arithmatic(0, 0)\n",
+    "        c.a = self.a * obj.a\n",
+    "        c.b = self.b * obj.b\n",
+    "        return c\n",
+    "    \n",
+    "\n",
+    "    def show(self):\n",
+    "        print(\"a =: \", self.a, \" b =: \", self.b)\n",
+    "\n",
+    "\n",
+    "a = Arithmatic(140, 150)\n",
+    "b = Arithmatic(50, 90)\n",
+    "\n",
+    "a.show()\n",
+    "b.show()\n",
+    "\n",
+    "c = a - b\n",
+    "d = a * b\n",
+    "\n",
+    "print()\n",
+    "c.show()\n",
+    "d.show()"
+   ]
   },
   {
    "cell_type": "code",
