ozee imge downloader python and Python String Format types
Ozee Image downloader features:
written in Python
need URL
you will get FULL HD poster of that episode

Python String Formatting:
format()
f''

--- a/24. Regular Ex/RegEx Basics.ipynb
+++ b/24. Regular Ex/RegEx Basics.ipynb
@@ -800,11 +800,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T13:21:30.125796Z",
-     "start_time": "2019-07-05T13:21:30.121785Z"
+     "end_time": "2019-07-05T20:11:14.731577Z",
+     "start_time": "2019-07-05T20:11:14.722550Z"
     }
    },
    "outputs": [
@@ -837,6 +837,28 @@
     "343434\n",
     "'''\n",
     "pattern = re.compile(r\"(6)\\1+\")\n",
+    "matches = pattern.finditer(text_to_search)\n",
+    "\n",
+    "count = 0\n",
+    "for match in matches:\n",
+    "    print(match)\n",
+    "    count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number in all numbers are same\n",
+    "# expected Result  345343\n",
+    "\n",
+    "text_to_search='''\n",
+    "aaaaabbbbbaaaaccccccdddddaaa\n",
+    "'''\n",
+    "pattern = re.compile(r\"\")\n",
     "matches = pattern.finditer(text_to_search)\n",
     "\n",
     "count = 0\n",
