--- a/08. Python Lists/5. List operations, slices and methods.ipynb
+++ b/08. Python Lists/5. List operations, slices and methods.ipynb
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "#         name=[]            age=[]         marks=[]\n",
+    "#         name=[]       age=[]         marks=[]\n",
     "#          \\               |           /          \n",
     "#           \\              |          /\n",
     "#            \\             |         /\n",
@@ -154,46 +154,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# SOME In-build functions "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -332,10 +297,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-06T21:06:01.837258Z",
+     "start_time": "2019-07-06T21:06:01.830741Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#search element index\n",
+    "foo = ['We', 'name', 'is', 'Penan', 'and', 'age', 'is', '28']\n",
+    "foo.index(\"Penan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-06T21:06:20.370575Z",
+     "start_time": "2019-07-06T21:06:20.363592Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Penan'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo[3]"
+   ]
   }
  ],
  "metadata": {
