--- a/11. Python Dictionary/1. How to create a dictionary.ipynb
+++ b/11. Python Dictionary/1. How to create a dictionary.ipynb
@@ -9,8 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:24:03.468749Z",
+     "start_time": "2019-07-08T01:24:03.466744Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# # dictionary follow pattern of key and value\n",
@@ -21,9 +26,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## create dictionary using { } curly brackets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:24:20.727854Z",
+     "start_time": "2019-07-08T01:24:20.723842Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -31,19 +48,25 @@
        "{'int': [1, 2, 3], 'floats': [1.5, 2.5, 3.5], 'char': ['a', 'b', 'c']}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# # create dictionary using { } curly brackets\n",
     "d = {\n",
     "    \"int\" : [1, 2, 3],\n",
     "    \"floats\" : [1.5, 2.5, 3.5],\n",
     "    \"char\" : ['a', 'b', 'c']\n",
     "}\n",
     "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## create dictionary using dict() "
    ]
   },
   {
@@ -63,7 +86,6 @@
     }
    ],
    "source": [
-    "# create dictionary using dict() \n",
     "playing = dict({1:\"name\", 2:\"address\", 3:\"phone_number\"})\n",
     "playing"
    ]
@@ -130,41 +152,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# convering list(tuple) into dictionary i.e [(), (), ()] => {, , ,}"
+    "## convering list(tuple) into dictionary i.e [(), (), ()] => {, , ,}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:26:54.925421Z",
+     "start_time": "2019-07-08T01:26:54.921411Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'orange'"
+       "{1: 'orange', 2: 'mango', 3: 'rose'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# # Access dictionary\n",
-    "# 1. using keys \n",
     "my_dict = dict([(1, \"orange\"), (2, \"mango\"), (3, \"rose\")])\n",
-    "my_dict[1]\n"
+    "my_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:27:01.685147Z",
+     "start_time": "2019-07-08T01:27:01.681138Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([(4, 'Four'), (5, 'Five'), (6, 'Six')])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "OrderedDict([\n",
+    "    (4, \"Four\"), \n",
+    "    (5, \"Five\"), \n",
+    "    (6, \"Six\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Access dictionary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## using keys "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:29:09.029037Z",
+     "start_time": "2019-07-08T01:29:09.026068Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "datatype = {\n",
+    "    \"int\" : [1, 2, 3],\n",
+    "    \"float\" : [1.5, 2.5, 3.5],\n",
+    "    \"char\" : ['a', 'b', 'c']\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:29:10.372870Z",
+     "start_time": "2019-07-08T01:29:10.369824Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -178,11 +268,6 @@
     }
    ],
    "source": [
-    "datatype = {\n",
-    "    \"int\" : [1, 2, 3],\n",
-    "    \"float\" : [1.5, 2.5, 3.5],\n",
-    "    \"char\" : ['a', 'b', 'c']\n",
-    "}\n",
     "datatype[\"int\"]"
    ]
   },
@@ -208,18 +293,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# using get() function\n",
-    "# The difference while using get() is \n",
-    "# that it returns None instead of KeyError, \n",
-    "# if the key is not found"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -241,8 +314,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using get() function\n",
+    "# get(key) returns value\n",
+    "# None if key not exist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:30:14.453015Z",
+     "start_time": "2019-07-08T01:30:14.450043Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -254,6 +343,31 @@
    ],
    "source": [
     "print(datatype.get(\"string\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-08T01:29:56.853594Z",
+     "start_time": "2019-07-08T01:29:56.849544Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'int': [1, 2, 3], 'float': [1.5, 2.5, 3.5], 'char': ['a', 'b', 'c']}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datatype"
    ]
   },
   {
@@ -419,6 +533,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
