--- a/02. Variables in Python/3. Values and Types.ipynb
+++ b/02. Variables in Python/3. Values and Types.ipynb
@@ -47,10 +47,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Variable\t\t\tType------------\n5485485405415\t\t\t<class 'int'>\n10.54548489459\t\t\t<class 'float'>\n{1: 'A'}\t\t\t<class 'dict'>\n{1, 2, 3, 4, 6}\t\t\t<class 'set'>\n('Cat', 'Dog')\t\t\t<class 'tuple'>\nTiger Is Animal\t\t\t<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5485485405415\n",
+    "b = 10.54548489459\n",
+    "e = 'h'\n",
+    "c = {1: \"A\"}\n",
+    "d = {1, 2, 3, 4, 6}\n",
+    "e = \"Cat\", \"Dog\"\n",
+    "f = \"Tiger Is Animal\"\n",
+    "\n",
+    "print(\"Variable\\t\\t\\tType------------\")\n",
+    "elements = [a, b, c, d, e, f]\n",
+    "for element in elements:\n",
+    "    print(f\"{element}\\t\\t\\t{type(element)}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -69,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
