--- a/08. Python Lists/1. Lists are mutable, Creation.ipynb
+++ b/08. Python Lists/1. Lists are mutable, Creation.ipynb
@@ -203,13 +203,13 @@
    ],
    "source": [
     "# using range()\n",
-    "a_list = list( range(-8,8 ) )\n",
+    "a_list = list(range(-8,8 ) )\n",
     "print(a_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-01T14:06:32.644024Z",
@@ -218,14 +218,14 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
@@ -234,11 +234,71 @@
    ]
   },
   {
+   "source": [
+    "## List Pooling is not allowed"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"apples\"\n",
+    "str2 = \"apples\"\n",
+    "print(str1 == str2)\n",
+    "print(id(str1) == id(str2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"apples\"\n",
+    "str2 = \"apples2\"\n",
+    "print(str1 == str2)\n",
+    "print(id(str1) == id(str2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [4, 5, 6,9 ]\n",
+    "apples = [4, 5, 6, 9]\n",
+    "print(id(fruits) == id(apples))\n",
+    "print(fruits == apples)"
+   ]
   }
  ],
  "metadata": {
@@ -257,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   },
   "toc": {
    "base_numbering": 1,
