--- a/12. Python Function/14. Call By Value, Call by Reference.ipynb
+++ b/12. Python Function/14. Call By Value, Call by Reference.ipynb
@@ -31,11 +31,11 @@
    "outputs": [],
    "source": [
     "# # Pass by Value:\n",
-    "# primitive datatype(int, float, string, )\n",
+    "# primitive datatypes(int, float, string, tuple)\n",
     "# tuple, \n",
     "    \n",
     "# # Pass by Reference (Mutable):\n",
-    "# list[] (mutated by its methods), set, dictionary    "
+    "# mutable datatypes(list, set, dictionary)    "
    ]
   },
   {
@@ -134,20 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "{0, 40, 10, 20, 30}\n",
-      "{0, 5, 40, 10, 20, 30}\n"
+      "{0, 40, 10, 20, 30}\n{0, 5, 40, 10, 20, 30}\n"
      ]
     }
    ],
    "source": [
-    "## tuple\n",
     "# set always pass by reference : \n",
     "def test(x):\n",
     "    x.add(5)\n",
@@ -206,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
