--- a/12. Python Function/23. Function as argument.ipynb
+++ b/12. Python Function/23. Function as argument.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-06T22:05:55.196397Z",
@@ -52,27 +52,27 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "(4, 5, 6, 7, 8, 9)\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'biggest -> 9   argument -> 6'"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
     "def foo(f, *arg):\n",
-    "    print(arg) # is unpacked -> set\n",
-    "    return f(arg) # set object as passed as argument\n",
+    "    print(arg) # is unpacked -> tuple\n",
+    "    return f(arg) # tuple object as passed as argument\n",
     "\n",
     "\n",
     "def bar(num): # one variable as argument can take set\n",
@@ -81,6 +81,13 @@
     "\n",
     "foo(bar, 4, 5, 6, 7, 8, 9)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -99,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   },
   "toc": {
    "base_numbering": 1,
