--- a/16. Adv Python File Handling/03. File Different Modes and Object Attributes.ipynb
+++ b/16. Adv Python File Handling/03. File Different Modes and Object Attributes.ipynb
@@ -200,12 +200,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "\n"
      ]
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-28T12:56:27.811695Z",
@@ -243,8 +243,8 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "a+\n"
      ]
@@ -265,15 +265,17 @@
    },
    "source": [
     "**Exercise. Find the mode and perform the respective action**\n",
+    "\n",
     "1. if mode is read, read the entire file\n",
     "2. if mode is write, write the \"Hello World\" into it\n",
     "3. if mode is append, write the \"Ths is next line\" into it\n",
+    "\n",
     "create file if doesn't exist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-28T13:33:47.356992Z",
@@ -282,11 +284,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "a+\n",
-      "\n"
+      "a+\n\n"
      ]
     }
    ],
@@ -302,13 +303,6 @@
     "else:\n",
     "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -327,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   },
   "toc": {
    "base_numbering": 1,
