--- a/02. Variables in Python/1. variables and constants.ipynb
+++ b/02. Variables in Python/1. variables and constants.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,69 @@
     "print(1)\n",
     "var = 10\n",
     "print(var)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. assignment with print function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'a' is an invalid keyword argument for print()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-cc0d4b255c67>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# this works in C++, but not in Python\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m410\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'a' is an invalid keyword argument for print()"
+     ]
+    }
+   ],
+   "source": [
+    "# this works in C++, but not in Python\n",
+    "print(a=410)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "#include <iostream>\n",
+    "#include <bits/stdc++.h>\n",
+    "using namespace std;\n",
+    "\n",
+    "int main() {\n",
+    "\tint p;\n",
+    "\tcout << (p = 10) << endl;\n",
+    "\tif (p = 20)\n",
+    "\t\tcout << \"p Value Changed\" << endl;\n",
+    "\tcout<< \"p : \" << p << endl;\n",
+    "\treturn 0;\n",
+    "}\n",
+    "/*\n",
+    "Result : \n",
+    "\n",
+    "10\n",
+    "p Value Changed\n",
+    "p : 20\n",
+    "*/\n",
+    "```"
    ]
   },
   {
@@ -96,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
