--- a/07. Learning Python Strings/4. Python Reverse String.ipynb
+++ b/07. Learning Python Strings/4. Python Reverse String.ipynb
@@ -1,28 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# https://www.journaldev.com/23647/python-reverse-string\n",
-    "# 1.1 Python Reverse String using Slicing\n",
-    "# 1.2 Python Reverse String using For Loop\n",
-    "# 1.3 Python Reverse String using While Loop\n",
-    "# 1.4 Python Reverse String using join() and reversed()\n",
-    "# 1.5 Python Reverse String using List reverse()\n",
-    "# 1.6 Python Reverse String using Recursion"
-   ]
+    "### https://www.journaldev.com/23647/python-reverse-string\n",
+    "1. Python Reverse String using Slicing\n",
+    "2. Python Reverse String using For Loop\n",
+    "3. Python Reverse String using While Loop\n",
+    "4. Python Reverse String using join() and reversed()\n",
+    "5. Python Reverse String using List reverse()\n",
+    "6. Python Reverse String using Recursion"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Python Reverse String using Slicing"
-   ]
+    "### ALGORITHM\tTIMEIT EXECUTION TIME (BEST OF 5)\tSLOWNESS\n",
+    "1. Slicing\t0.449 usec\t1x\n",
+    "5. List reverse()\t2.46 usec\t5.48x\n",
+    "4. reversed() + join()\t2.49 usec\t5.55x\n",
+    "2. for loop\t5.5 usec\t12.25x\n",
+    "3. while loop\t9.4 usec\t20.94x\n",
+    "6. Recursion\t24.3 usec\t54.12x"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## 1. Python Reverse String using Slicing"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -46,13 +55,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Python Reverse String using Slicing"
-   ]
+    "## 2. Python Reverse String using for loop"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -97,14 +104,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Python Reverse String using While Loop\n",
-    "str=\"INTERNATIONAL COUNCIL OF CRICKET\""
-   ]
+    "## 3. Python Reverse String using While Loop\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -122,6 +126,7 @@
    ],
    "source": [
     "%%time\n",
+    "str=\"INTERNATIONAL COUNCIL OF CRICKET\"\n",
     "i = 0\n",
     "rev = ''\n",
     "while i<len(str):\n",
@@ -131,12 +136,18 @@
    ]
   },
   {
+   "source": [
+    "## 4.  Python Reverse String using join() and reversed()"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python Reverse String using join() and reversed()\n",
     "str=\"INTERNATIONAL COUNCIL OF CRICKET\""
    ]
   },
@@ -161,13 +172,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Python Reverse String using List reverse()"
-   ]
+    "## 5. Python Reverse String using List reverse()"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -244,12 +253,18 @@
    ]
   },
   {
+   "source": [
+    "## 6. Python Reverse String using Recursion"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python Reverse String using Recursion\n",
     "str = \"INTERNATIONAL COUNCIL OF CRICKET\""
    ]
   },
@@ -283,21 +298,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ALGORITHM\tTIMEIT EXECUTION TIME (BEST OF 5)\tSLOWNESS\n",
-    "# Slicing\t0.449 usec\t1x\n",
-    "# List reverse()\t2.46 usec\t5.48x\n",
-    "# reversed() + join()\t2.49 usec\t5.55x\n",
-    "# for loop\t5.5 usec\t12.25x\n",
-    "# while loop\t9.4 usec\t20.94x\n",
-    "# Recursion\t24.3 usec\t54.12x"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
