--- a/08. Python Lists/7. Deleting elements.ipynb
+++ b/08. Python Lists/7. Deleting elements.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# removing by element"
+    "## removing by item"
    ]
   },
   {
