--- a/09. Python Tuples/09. Built-in functions with Tuple.ipynb
+++ b/09. Python Tuples/09. Built-in functions with Tuple.ipynb
@@ -297,12 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "{'name': 'PENAN', 'age': 19, 'course': 'B.Tech'}\n"
      ]
@@ -443,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
