--- a/16. Adv Python File Handling/04. How to create a Text Fil and Append Data to a File and Read a File.ipynb
+++ b/16. Adv Python File Handling/04. How to create a Text Fil and Append Data to a File and Read a File.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-28T12:46:57.019774Z",
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "f = open(\"new_file.txt\", 'w')\n",
-    "for i in range(10):\n",
+    "for i in range(1, 11):\n",
     "     f.write(\"This is line %d\\r\\n\" % (i+1))\n",
     "f.close()"
    ]
@@ -300,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   },
   "toc": {
    "base_numbering": 1,
