--- a/16. Adv Python File Handling/09. Working with CSV files and CSV Module.ipynb
+++ b/16. Adv Python File Handling/09. Working with CSV files and CSV Module.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"section4\"></a>\n",
+    "\n",
     "**4. CSV Module Functions**  \n",
     "\n",
     "In CSV module documentation you can find following functions:  \n",
@@ -123,7 +123,7 @@
     }
    },
    "source": [
-    "<a id=\"section5\"></a>\n",
+    "\n",
     "**5. How to Read a CSV File** \n",
     "\n",
     "To read data from CSV files, you must use the reader function to generate a reader object.  \n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-28T15:58:09.762254Z",
@@ -144,13 +144,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "['ï»¿Programming language', 'Designed by', 'Appeared', 'Extension']\n",
-      "['Python', 'Guido van Rossum', '1991', '.py']\n",
-      "['Java', 'James Gosling', '1995', '.java']\n",
-      "['C++', 'Bjarne Stroustrup', '1983', '.cpp']\n"
+      "['ï»¿Programming language', 'Designed by', 'Appeared', 'Extension']\n['Python', 'Guido van Rossum', '1991', '.py']\n['Java', 'James Gosling', '1995', '.java']\n['C++', 'Bjarne Stroustrup', '1983', '.cpp']\n"
      ]
     }
    ],
@@ -293,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0-final"
   },
   "toc": {
    "base_numbering": 1,
