--- a/24. Regular Ex/RegEx Basics.ipynb
+++ b/24. Regular Ex/RegEx Basics.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T11:42:46.237072Z",
-     "start_time": "2019-07-05T11:42:46.229072Z"
+     "end_time": "2019-07-22T14:08:27.413918Z",
+     "start_time": "2019-07-22T14:08:27.410656Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T11:43:09.706756Z",
-     "start_time": "2019-07-05T11:43:09.694756Z"
+     "end_time": "2019-07-22T14:08:27.567745Z",
+     "start_time": "2019-07-22T14:08:27.415923Z"
     },
     "scrolled": true
    },
@@ -130,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:07:37.268545Z",
-     "start_time": "2019-07-05T12:07:37.264536Z"
+     "end_time": "2019-07-22T14:08:27.672892Z",
+     "start_time": "2019-07-22T14:08:27.570753Z"
     },
     "scrolled": true
    },
@@ -168,11 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:29:30.787630Z",
-     "start_time": "2019-07-05T12:29:30.783620Z"
+     "end_time": "2019-07-22T14:08:27.788409Z",
+     "start_time": "2019-07-22T14:08:27.677892Z"
     }
    },
    "outputs": [
@@ -183,8 +183,7 @@
       "<re.Match object; span=(1, 19), match='Mr. Schafer Rajput'>\n",
       "<re.Match object; span=(22, 36), match='Mr Smith Kumar'>\n",
       "<re.Match object; span=(50, 67), match='Mrs. Robinson Per'>\n",
-      "<re.Match object; span=(68, 76), match='Mr. T RR'>\n",
-      "0\n"
+      "<re.Match object; span=(68, 76), match='Mr. T RR'>\n"
      ]
     }
    ],
@@ -207,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:34:16.636116Z",
-     "start_time": "2019-07-05T12:34:16.630100Z"
+     "end_time": "2019-07-22T14:08:28.016720Z",
+     "start_time": "2019-07-22T14:08:27.790455Z"
     },
     "scrolled": true
    },
@@ -326,11 +325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:36:50.178151Z",
-     "start_time": "2019-07-05T12:36:50.174140Z"
+     "end_time": "2019-07-22T14:08:28.093853Z",
+     "start_time": "2019-07-22T14:08:28.018727Z"
     }
    },
    "outputs": [
@@ -366,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:37:18.058367Z",
-     "start_time": "2019-07-05T12:37:18.054358Z"
+     "end_time": "2019-07-22T14:08:28.211165Z",
+     "start_time": "2019-07-22T14:08:28.095835Z"
     }
    },
    "outputs": [
@@ -409,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:37:20.858032Z",
-     "start_time": "2019-07-05T12:37:20.854022Z"
+     "end_time": "2019-07-22T14:08:28.327808Z",
+     "start_time": "2019-07-22T14:08:28.214175Z"
     }
    },
    "outputs": [
@@ -452,11 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:38:13.122880Z",
-     "start_time": "2019-07-05T12:38:13.118870Z"
+     "end_time": "2019-07-22T14:08:28.431699Z",
+     "start_time": "2019-07-22T14:08:28.329859Z"
     }
    },
    "outputs": [
@@ -497,11 +496,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:40:18.234819Z",
-     "start_time": "2019-07-05T12:40:18.229806Z"
+     "end_time": "2019-07-22T14:08:28.536867Z",
+     "start_time": "2019-07-22T14:08:28.433705Z"
     }
    },
    "outputs": [
@@ -559,11 +558,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:48:59.256618Z",
-     "start_time": "2019-07-05T12:48:59.252608Z"
+     "end_time": "2019-07-22T14:08:28.664205Z",
+     "start_time": "2019-07-22T14:08:28.544890Z"
     }
    },
    "outputs": [
@@ -607,11 +606,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:50:57.600788Z",
-     "start_time": "2019-07-05T12:50:57.596777Z"
+     "end_time": "2019-07-22T14:08:28.792912Z",
+     "start_time": "2019-07-22T14:08:28.668217Z"
     }
    },
    "outputs": [
@@ -660,11 +659,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T12:58:45.648159Z",
-     "start_time": "2019-07-05T12:58:45.644185Z"
+     "end_time": "2019-07-22T14:08:28.908275Z",
+     "start_time": "2019-07-22T14:08:28.795925Z"
     }
    },
    "outputs": [
@@ -706,11 +705,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T13:17:21.685611Z",
-     "start_time": "2019-07-05T13:17:21.681598Z"
+     "end_time": "2019-07-22T14:08:29.024039Z",
+     "start_time": "2019-07-22T14:08:28.911282Z"
     }
    },
    "outputs": [
@@ -752,11 +751,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T13:19:27.597800Z",
-     "start_time": "2019-07-05T13:19:27.593790Z"
+     "end_time": "2019-07-22T14:08:29.152593Z",
+     "start_time": "2019-07-22T14:08:29.027004Z"
     }
    },
    "outputs": [
@@ -800,11 +799,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-05T20:11:14.731577Z",
-     "start_time": "2019-07-05T20:11:14.722550Z"
+     "end_time": "2019-07-22T14:08:29.267921Z",
+     "start_time": "2019-07-22T14:08:29.155642Z"
     }
    },
    "outputs": [
@@ -848,9 +847,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-22T14:08:29.386570Z",
+     "start_time": "2019-07-22T14:08:29.270912Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 0), match=''>\n",
+      "<re.Match object; span=(1, 1), match=''>\n",
+      "<re.Match object; span=(2, 2), match=''>\n",
+      "<re.Match object; span=(3, 3), match=''>\n",
+      "<re.Match object; span=(4, 4), match=''>\n",
+      "<re.Match object; span=(5, 5), match=''>\n",
+      "<re.Match object; span=(6, 6), match=''>\n",
+      "<re.Match object; span=(7, 7), match=''>\n",
+      "<re.Match object; span=(8, 8), match=''>\n",
+      "<re.Match object; span=(9, 9), match=''>\n",
+      "<re.Match object; span=(10, 10), match=''>\n",
+      "<re.Match object; span=(11, 11), match=''>\n",
+      "<re.Match object; span=(12, 12), match=''>\n",
+      "<re.Match object; span=(13, 13), match=''>\n",
+      "<re.Match object; span=(14, 14), match=''>\n",
+      "<re.Match object; span=(15, 15), match=''>\n",
+      "<re.Match object; span=(16, 16), match=''>\n",
+      "<re.Match object; span=(17, 17), match=''>\n",
+      "<re.Match object; span=(18, 18), match=''>\n",
+      "<re.Match object; span=(19, 19), match=''>\n",
+      "<re.Match object; span=(20, 20), match=''>\n",
+      "<re.Match object; span=(21, 21), match=''>\n",
+      "<re.Match object; span=(22, 22), match=''>\n",
+      "<re.Match object; span=(23, 23), match=''>\n",
+      "<re.Match object; span=(24, 24), match=''>\n",
+      "<re.Match object; span=(25, 25), match=''>\n",
+      "<re.Match object; span=(26, 26), match=''>\n",
+      "<re.Match object; span=(27, 27), match=''>\n",
+      "<re.Match object; span=(28, 28), match=''>\n",
+      "<re.Match object; span=(29, 29), match=''>\n",
+      "<re.Match object; span=(30, 30), match=''>\n",
+      "31\n"
+     ]
+    }
+   ],
    "source": [
     "# number in all numbers are same\n",
     "# expected Result  345343\n",
@@ -866,6 +909,35 @@
     "    print(match)\n",
     "    count += 1\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-22T14:08:29.511728Z",
+     "start_time": "2019-07-22T14:08:29.391584Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['23', '55']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "ptr = 'R23C55'\n",
+    "\n",
+    "pattern = re.compile(\"\\d+\")\n",
+    "\n",
+    "l = re.findall(pattern, ptr)\n",
+    "\n",
+    "print(l)\n"
    ]
   }
  ],
