--- a/02. Variables in Python/8. type Conversions.ipynb
+++ b/02. Variables in Python/8. type Conversions.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* float()\tReturns a floating-point object constructed from a number or string\n",
+    "* int()\t    Returns an integer object constructed from a number or string\n",
+    "* str()\t    Returns a string version of an object"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -146,27 +155,6 @@
     "print(x)\n",
     "print(y)\n",
     "print(z)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Type Conversion\n",
-    "# Function\tDescription\n",
-    "# ascii()\tReturns a string containing a printable representation of an object\n",
-    "# bin()\tConverts an integer to a binary string\n",
-    "# bool()\tConverts an argument to a Boolean value\n",
-    "# chr()\tReturns string representation of character given by integer argument\n",
-    "# complex()\tReturns a complex number constructed from arguments\n",
-    "# float()\tReturns a floating-point object constructed from a number or string\n",
-    "# hex()\tConverts an integer to a hexadecimal string\n",
-    "# int()\tReturns an integer object constructed from a number or string\n",
-    "# oct()\tConverts an integer to an octal string\n",
-    "# ord()\tReturns integer representation of a character\n",
-    "# repr()\tReturns a string containing a printable representation of an object\n",
-    "# str()\tReturns a string version of an object\n",
-    "# type()\tReturns the type of an object or creates a new type object"
    ]
   },
   {
