--- a/03. String Handling/1. What is string String operations and indices.ipynb
+++ b/03. String Handling/1. What is string String operations and indices.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# String literals in python are surrounded by either single quotation marks, or double quotation marks.\n",
+    "#### String literals in python are surrounded by either single quotation marks, or double quotation marks.\n",
     "\n",
-    "# 'hello' is the same as \"hello\".\n",
+    "#### 'hello' is the same as \"hello\".\n",
     "\n",
-    "# You can display a string literal with the print() function:"
+    "#### You can display a string literal with the print() function:"
    ]
   },
   {
