--- a/03. String Handling/10. non primitive data types in python.ipynb
+++ b/03. String Handling/10. non primitive data types in python.ipynb
@@ -6,15 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# until now we have seen primitive data types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# until now we have seen primitive data types\n",
     "# now we will see non primitive data type"
    ]
   },
@@ -22,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# # Python Numbers\n",
-    "# Python List\n",
-    "# Python Tuple\n",
-    "# Python String\n",
-    "# Python Set\n",
-    "# Python Dictionary"
+    "#### Python Numbers\n",
+    "#### Python List\n",
+    "#### Python Tuple\n",
+    "#### Python String\n",
+    "#### Python Set\n",
+    "#### Python Dictionary"
    ]
   },
   {
@@ -152,13 +144,6 @@
    "source": [
     "dictionary"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
