--- a/03. String Handling/6. String Formatting Operator With the % Operator.ipynb
+++ b/03. String Handling/6. String Formatting Operator With the % Operator.ipynb
@@ -6,15 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# String Formatting With the % Operator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# String Formatting With the % Operator\n",
     "# Like C "
    ]
   },
@@ -42,21 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name is John and age is 30\n"
+      "My name is John and age is 30.\n"
      ]
     }
    ],
    "source": [
     "name = \"John\"\n",
     "age = 30\n",
-    "print(\"My name is %s and age is %d\" %(name, age))"
+    "print(\"My name is %s and age is %d.\" %(name, age))"
    ]
   },
   {
@@ -143,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
