--- a/02. Variables in Python/9. Mutable Versus Immutable Objects.ipynb
+++ b/02. Variables in Python/9. Mutable Versus Immutable Objects.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple put, a mutable object can be changed after it is created, and an immutable object can’t."
+    "### Simple put, a mutable object can be changed after it is created, and an immutable object can’t."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# mutable objects:\n",
+    "##### mutable objects:\n",
     "* list, dict, set, byte array\n",
     "\n",
-    "# Immutable objects:\n",
+    "##### Immutable objects:\n",
     "* int, float, complex, string, tuple, frozen set [note: immutable version of set], bytes"
    ]
   },
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# immutable objects : objects can't be changed"
+    "### 1. Immutable objects : objects can't be changed"
    ]
   },
   {
@@ -115,15 +115,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# mutable means location change of same varibale, value can be changed (even you increment / decrement)"
+    "#### 2. Mutable means location change of same varibale, value can be changed (even you increment / decrement)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# -------------------------------------------------------------\n",
-    "# immutable objects : objects can't be changed"
+    "#### -------------------------------------------------------------\n",
+    "#### immutable objects : objects can't be changed"
    ]
   },
   {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,28 +160,39 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list = [50, 40, 20, 60, 80]\n",
-    "list1 = list\n",
+    "list2 = [50, 40, 20, 60, 80]\n",
+    "list1 = list2\n",
     "list1.append(90)\n",
-    "id(list)==id(list1)"
+    "id(list2)==id(list1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list = [50, 40, 20, 60, 80]\n",
-    "list1 = list\n",
-    "list1 = list.append(90)\n",
-    "id(list)==id(list1)"
+    "lst = [50, 40, 20, 60, 80]\n",
+    "list1 = lst\n",
+    "list1 = lst.append(90)\n",
+    "id(lst)==id(list1)"
    ]
   },
   {
@@ -335,14 +346,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# list1 and list2 will be pointing to the same list object after the modification."
+    "#### list1 and list2 will be pointing to the same list object after the modification."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# immutable means location same, value can be changed"
+    "#### immutable means location same, value can be changed"
    ]
   },
   {
@@ -369,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
