--- a/03. String Handling/2. String Functions, Methods.ipynb
+++ b/03. String Handling/2. String Functions, Methods.ipynb
@@ -4,37 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# String functions "
+    "### String functions "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# str.count()"
+    "#### 1. str.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The count() method returns the number of times a specified value appears in the string."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# return the number of times the value \"apple\" appears in the string:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +25,14 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# The count() method returns the number of times a specified value appears in the string.\n",
+    "# return the number of times the value \"apple\" appears in the string:\n",
     "\"i love apple, apple is good food, i like apple juice.\".count(\"apple\")"
    ]
   },
@@ -56,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# capitalize() : Converts first character to Capital Letter"
+    "#### 2. capitalize() : Converts first character to Capital Letter"
    ]
   },
   {
@@ -81,39 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'I love apple. apple is good food. i like apple juice.'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"i love apple. apple is good food. i like apple juice.\".capitalize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# center()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# center()\n",
     "# center() Method With Default fillchar"
    ]
   },
@@ -167,30 +123,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# endswith "
+    "#### 3. endswith() Without start and end Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The endswith() method returns True if a string ends with the specified suffix. If not, it returns False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. endswith() Without start and end Parameters"
+    "# endswith \n",
+    "# The endswith() method \n",
+    "# returns True if a string ends with the specified suffix. \n",
+    "# If not, it returns False"
    ]
   },
   {
@@ -225,12 +173,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 1. endswith() With start and end Parameters"
+    "#### 4. endswith() With start and end Parameters"
    ]
   },
   {
@@ -270,12 +216,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# isalnum() characters + numbers + no spaces + no comma + no dot+ no special characters"
+    "#### 5. isalnum() characters + numbers + no spaces + no comma + no dot+ no special characters"
    ]
   },
   {
@@ -359,12 +303,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# some practical example with string.isalnum()"
+    "#### 6. some practical example with string.isalnum()"
    ]
   },
   {
@@ -389,13 +331,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -416,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,17 +432,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# string isalpha()"
+    "#### 6. string isalpha()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +449,7 @@
        "True"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,12 +588,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# isdigit()"
+    "#### 7. isdigit()"
    ]
   },
   {
@@ -684,12 +615,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# isspace()"
+    "#### 7. isspace()"
    ]
   },
   {
@@ -818,12 +747,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# title()"
+    "#### 8. title()"
    ]
   },
   {
@@ -847,12 +774,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9. istitle() "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# istitle() \n",
+    "\n",
     "# checks for titlecase\n",
     "# apple is best pc => titlecase => Apple Is My Best Pc"
    ]
@@ -1419,13 +1353,6 @@
    "source": [
     "str.startswith(\"NATIONAL\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1444,7 +1371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   },
   "toc": {
    "base_numbering": 1,
