--- a/07. Python Strings/1. Accessing Values in Strings.ipynb
+++ b/07. Python Strings/1. Accessing Values in Strings.ipynb
@@ -74,21 +74,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# http://www.iitk.ac.in/esc101/05Aug/tutorial/figures/java/objects-charAt.gif"
+    "![title](objects-charAt.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# : operators"
+    "# Indexing using : operators"
    ]
   },
   {
@@ -426,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
